<resources>
    <string name="app_name">Ghibli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="original_title">Original Title:</string>
    <string name="original_title_romanised">Original Title Romanised:</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="release_date">Release Date:</string>
    <string name="rate_score">Rate Score:</string>
    <string name="description">Description: </string>
    <string name="klasifikasi">Clasification: </string>
    <string name="warna_mata">Eyes Color:</string>
    <string name="hair_colors">Hair Color:</string>
    <string name="film_list">Film List</string>
    <string name="location_list">Location List</string>
    <string name="species_list">Species List</string>
    <string name="climate">Climate: </string>
    <string name="ghibli">Ghibli</string>
</resources>