<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <data>
        <variable
            name="viewModel"
            type="com.helehpro.ghibli.ui.species.SpeciesViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

<!--            <ImageView-->
<!--                android:id="@+id/banner"-->
<!--                android:layout_width="186dp"-->
<!--                android:layout_height="236dp"-->
<!--                android:layout_marginTop="18dp"-->
<!--                app:imageUrl="@{viewModel.species.image}"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/logo" />-->

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@{viewModel.species.name}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Castle in the Sky" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:background="?attr/dividerHorizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/original_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@{viewModel.species.classification}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toEndOf="@id/original_title_label"
                app:layout_constraintTop_toBottomOf="@id/view"
                tools:text="天空の城ラピュタ" />

            <TextView
                android:id="@+id/original_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/klasifikasi"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/original_title_romanised"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@{viewModel.species.eye_colors}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toEndOf="@id/original_title_romanised_label"
                app:layout_constraintTop_toBottomOf="@id/original_title_label"
                tools:text="Tenkū no shiro Rapyuta" />

            <TextView
                android:id="@+id/original_title_romanised_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/warna_mata"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_title_label" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@{viewModel.species.hair_colors}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toEndOf="@id/director_label"
                app:layout_constraintTop_toBottomOf="@id/original_title_romanised_label"
                tools:text="Hayao Miyazaki" />

            <TextView
                android:id="@+id/director_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:text="@string/hair_colors"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/original_title_romanised_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
