<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="film"
            type="com.helehpro.ghibli.network.Film" />
        <variable
            name="clickListener"
            type="com.helehpro.ghibli.ui.film.FilmListener" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:onClick="@{() -> clickListener.onClick(film)}"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <ImageView
                android:id="@+id/banner"
                android:layout_width="130dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="5dp"
                app:imageUrl="@{ghibli.image}"
                tools:srcCompat="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@{ghibli.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="@id/banner"
                app:layout_constraintStart_toEndOf="@id/banner"
                tools:text="Castle in the Sky" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@{film.release_date}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/release_date_label"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="1986" />

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@string/release_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/banner"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@{film.director}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/director_label"
                app:layout_constraintTop_toBottomOf="@id/release_date_label"
                tools:text="Hayao Miyazaki" />

            <TextView
                android:id="@+id/director_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@string/director"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/banner"
                app:layout_constraintTop_toBottomOf="@id/release_date_label" />


            <TextView
                android:id="@+id/rt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@{film.rt_score}"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                tools:text="95"
                app:layout_constraintTop_toBottomOf="@id/director_label"
                app:layout_constraintStart_toEndOf="@id/rt_score_label"/>

            <TextView
                android:id="@+id/rt_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:padding="8dp"
                android:text="@string/rate_score"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/banner"
                app:layout_constraintTop_toBottomOf="@id/director_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
